--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <article class="resume" data-page="resume">
           <header>
             <h2 class="h2 article-title">Resume
-              <a href="https://drive.google.com/file/d/1ETNle-hXImPnf2yrMpW22tnTFLDVz7_D/view?usp=share_link" target="_blank">
+              <a href="https://drive.google.com/file/d/1XDruOBk31hTQFWHDxdfr9N_qHU50Mn_e/view?usp=share_link">
               <img
               src="./assets/images/download1.png"
               width="30"/>
