--- a/index.html
+++ b/index.html
@@ -432,6 +432,19 @@
                 </p>
               </li>
             </ol>
+            
+             <ol class="timeline-list">
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">Shipping Co-Ordinator</h4>
+
+                <span>2022</span>
+
+                <p class="timeline-text">
+                  Assist in developing a social media 
+                  strategy that aligns with the organization's goals and target audience.
+                </p>
+              </li>
+            </ol>
           </section>
 
           <section class="skill">
