--- a/index.html
+++ b/index.html
@@ -417,31 +417,33 @@
                 <ion-icon name="book-outline"></ion-icon>
               </div>
 
-              <h3 class="h3">Experience</h3>
+              <h3 class="h3">Education</h3>
             </div>
 
             <ol class="timeline-list">
               <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Social Media Marketing</h4>
+                <h4 class="h4 timeline-item-title">
+                  Master of Computer Application
+                </h4>
 
-                <span>2022</span>
+                <span>2020 - 2022</span>
 
                 <p class="timeline-text">
-                  Assist in developing a social media 
-                  strategy that aligns with the organization's goals and target audience.
+                  P.E.S. Modern College is 
+                  located in Pune, India.
                 </p>
               </li>
-            </ol>
-            
-             <ol class="timeline-list">
-              <li class="timeline-item">
-                <h4 class="h4 timeline-item-title">Shipping Co-Ordinator</h4>
 
-                <span>2022</span>
+              <li class="timeline-item">
+                <h4 class="h4 timeline-item-title">
+                  Bachelor of Computer Science
+                </h4>
+
+                <span>2017 - 2020</span>
 
                 <p class="timeline-text">
-                  Assist in developing a social media 
-                  strategy that aligns with the organization's goals and target audience.
+                  N.D.M.V.P College is 
+                  located in Nashik, India.
                 </p>
               </li>
             </ol>
