--- a/index.html
+++ b/index.html
@@ -373,6 +373,10 @@
               </a></h2>
           </header>
 
+        <!--
+          - Education
+        -->
+          
           <section class="timeline">
             <div class="title-wrapper">
               <div class="icon-box">
@@ -411,39 +415,48 @@
             </ol>
           </section>
 
+        <!--
+          - Experience
+        -->
+          
           <section class="timeline">
             <div class="title-wrapper">
               <div class="icon-box">
                 <ion-icon name="book-outline"></ion-icon>
               </div>
 
-              <h3 class="h3">Education</h3>
+              <h3 class="h3">Experience</h3>
             </div>
 
             <ol class="timeline-list">
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  Master of Computer Application
+                  Social Media Marketing Internship
                 </h4>
 
-                <span>2020 - 2022</span>
+                <span>2023</span>
 
                 <p class="timeline-text">
-                  P.E.S. Modern College is 
-                  located in Pune, India.
+                  - Manages the company’s social media accounts and posts content.
+                  - Brainstorms campaign ideas.
+                  - Monitor various social media platforms such as Facebook, Instagram, and Twitter.
+                  - Provide suggestions to management for improving customer experience on social platforms and internal processes.
                 </p>
               </li>
 
               <li class="timeline-item">
                 <h4 class="h4 timeline-item-title">
-                  Bachelor of Computer Science
+                  Shipping Co-Ordinatior
                 </h4>
 
-                <span>2017 - 2020</span>
+                <span>2023 - Present</span>
 
                 <p class="timeline-text">
-                  N.D.M.V.P College is 
-                  located in Nashik, India.
+                  - Coordinating daily operations with the Shipping Manager.
+                  - Creating and maintaining a report of the daily shipping activities.
+                  - Obtaining shipment invoices and checking the accuracy of the same.
+                  - Communicating and understanding the preferred courier mode.
+                  - Resolving any queries and complaints.
                 </p>
               </li>
             </ol>
