--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <section class="timeline">
             <div class="title-wrapper">
               <div class="icon-box">
-                <ion-icon name="book-outline"></ion-icon>
+                <ion-icon name="award-outline"></ion-icon>
               </div>
 
               <h3 class="h3">Experience</h3>
@@ -437,10 +437,10 @@
                 <span>2023</span>
 
                 <p class="timeline-text">
-                  - Manages the company’s social media accounts and posts content.
-                  - Brainstorms campaign ideas.
-                  - Monitor various social media platforms such as Facebook, Instagram, and Twitter.
-                  - Provide suggestions to management for improving customer experience on social platforms and internal processes.
+                  - Manages the company’s social media accounts and posts content.<br>
+                  - Brainstorms campaign ideas.<br>
+                  - Monitor various social media platforms such as Facebook, Instagram, and Twitter.<br>
+                  - Provide suggestions to management for improving customer experience on social platforms and internal processes.<br>
                 </p>
               </li>
 
@@ -452,11 +452,11 @@
                 <span>2023 - Present</span>
 
                 <p class="timeline-text">
-                  - Coordinating daily operations with the Shipping Manager.
-                  - Creating and maintaining a report of the daily shipping activities.
-                  - Obtaining shipment invoices and checking the accuracy of the same.
-                  - Communicating and understanding the preferred courier mode.
-                  - Resolving any queries and complaints.
+                  - Coordinating daily operations with the Shipping Manager.<br>
+                  - Creating and maintaining a report of the daily shipping activities.<br>
+                  - Obtaining shipment invoices and checking the accuracy of the same.<br>
+                  - Communicating and understanding the preferred courier mode.<br>
+                  - Resolving any queries and complaints.<br>
                 </p>
               </li>
             </ol>
