--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <section class="timeline">
             <div class="title-wrapper">
               <div class="icon-box">
-                <ion-icon name="award-outline"></ion-icon>
+                <ion-icon name="bookmark-outline"></ion-icon>
               </div>
 
               <h3 class="h3">Experience</h3>
